fixes to aave-test-kit

--- a/aave-test-kit/Dockerfile
+++ b/aave-test-kit/Dockerfile
@@ -5,7 +5,7 @@ FROM --platform=linux/amd64 debian:bookworm-slim
 # Install required packages
 RUN apt-get update -y \
   && apt-get upgrade -y \
-  && apt-get install -y python3 python3-pip curl make wget git \
+  && apt-get install -y python3 python3-pip curl make wget git jq \
   && wget https://github.com/mikefarah/yq/releases/download/v4.34.1/yq_linux_amd64 -O /usr/local/bin/yq \
   && chmod +x /usr/local/bin/yq \
   && apt-get clean && rm -rf /var/lib/apt/lists/*
@@ -20,15 +20,28 @@ ENV PATH="$PATH:${HOME}/.local/bin"
 ENV APTOS_NETWORK=local \
   ARTIFACTS_LEVEL=all \
   DEFAULT_FUND_AMOUNT=100000000 \
-  INIT_DATA=true \
+  MOVE_VERSION=2.1 \
+  COMPILER_VERSION=2.0 \
   DEFAULT_FUNDER_PRIVATE_KEY=0x0 \
   AAVE_ACL_PRIVATE_KEY=0x0 \
   AAVE_CONFIG_PRIVATE_KEY=0x0 \
   AAVE_MATH_PRIVATE_KEY=0x0 \
   AAVE_ORACLE_PRIVATE_KEY=0x0 \
   AAVE_POOL_PRIVATE_KEY=0x0 \
-  AAVE_MOCK_UNDERLYING_TOKENS_PRIVATE_KEY=0x0 \
-  AAVE_LARGE_PACKAGES_PRIVATE_KEY=0x0
+  AAVE_MOCK_UNDERLYINGS_PRIVATE_KEY=0x0 \
+  AAVE_LARGE_PACKAGES_PRIVATE_KEY=0x0 \
+  AAVE_DATA_PRIVATE_KEY=0x0 \
+  AAVE_DATA_FEEDS_PRIVATE_KEY=0x0 \
+  AAVE_PLATFORM_PRIVATE_KEY=0x0 \
+  DATA_FEEDS_PRIVATE_KEY=0x0 \
+  PLATFORM_PRIVATE_KEY=0x0 \
+  DEFAULT_PRIVATE_KEY=0x0 \
+  TEST_ACCOUNT_0_PRIVATE_KEY=0x0 \
+  TEST_ACCOUNT_1_PRIVATE_KEY=0x0 \
+  TEST_ACCOUNT_2_PRIVATE_KEY=0x0 \
+  TEST_ACCOUNT_3_PRIVATE_KEY=0x0 \
+  TEST_ACCOUNT_4_PRIVATE_KEY=0x0 \
+  TEST_ACCOUNT_5_PRIVATE_KEY=0x0
 
 # Expose necessary ports
 EXPOSE 8070 8080 8081 8090 9101 50051
