--- a/aave-test-kit/docker-compose.yml
+++ b/aave-test-kit/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - aptos-local-testnet-network
 
   postgres:
-    image: postgres
+    image: postgres:17
     container_name: postgres
     hostname: postgres
     restart: always
@@ -30,11 +30,6 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: indexer
-    # healthcheck:
-    #   test: ["CMD", "pg_isready", "-U", "postgres"]
-    #   interval: 10s
-    #   timeout: 5s
-    #   retries: 5
     volumes:
       - postgres:/var/lib/postgresql/data
       - ./postgres-init:/docker-entrypoint-initdb.d
